name: FinancialProduct
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
    Modelling financial products

executable FinancialProduct
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        containers >=0.5.6.2 && <0.6,
        time >=1.5.0.1 && <1.6,
        mtl >=2.2.1 && <2.3,
        data-default >=0.5.3
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        EvalProd
        FinProduct
        Flow
        Listed.Bond
        Listed.SimpleOption
        MarketData
        Observable
        ObservableExperiments
        TestMarketData
        Utils.Monad
        Utils.Time
    ghc-options: -ferror-spans

test-suite test-FinancialProduct
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -ferror-spans
