name: FinancialProduct
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
    Modelling financial products

executable FinancialProduct
    main-is: Main.hs
    build-depends:
        base -any,
        containers >=0.5.6.2 && <0.6,
        time >=1.5.0.1 && <1.6,
        mtl >=2.2.1 && <2.3,
        ghc >=7.10.2 && <7.11
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Eval
        Eval.MarketData
        Eval.Monad
        Eval.Result
        Listed.Bond
        Listed.Option
        Listed.Option.Asian
        Listed.Option.BestOf
        Listed.Option.Core
        Listed.Option.European
        Observable
        Observable.Class
        Observable.Dependency
        Observable.Predicate
        Observable.Quantity
        Observable.QuantityUtils
        Payoff
        Payoff.Flow
        Payoff.Product
        Payoff.Product.BestOf
        Payoff.Product.Combinator
        Payoff.Product.Core
        Payoff.Product.FirstOf
        TestMarketData
        Utils.Foldable
        Utils.Monad
        Utils.Syntax
        Utils.Time
    ghc-options: -ferror-spans -O2

test-suite test-FinancialProduct
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        containers >=0.5.6.2 && <0.6,
        time >=1.5.0.1 && <1.6,
        mtl >=2.2.1 && <2.3,
        HUnit -any,
        ghc >=7.10.2 && <7.11
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Tests.Observable
    ghc-options: -ferror-spans
