name: FinancialProduct
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
description:
    Modelling financial products

executable FinancialProduct
    main-is: Main.hs
    build-depends:
        base -any,
        containers >=0.5.6.2 && <0.6,
        time >=1.5.0.1 && <1.6,
        mtl >=2.2.1 && <2.3,
        ghc >=7.10.2 && <7.11
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Eval
        Eval.CachedEval
        Eval.Class
        Eval.MarketData
        Eval.NoCacheEval
        Eval.Result
        Listed.Bond
        Listed.Option
        Listed.Option.Asian
        Listed.Option.BestOf
        Listed.Option.Core
        Listed.Option.European
        Observable
        Observable.Class
        Observable.Dependency
        Observable.Predicate
        Observable.PredicateUtils
        Observable.Quantity
        Observable.QuantityUtils
        Observable.Types
        Payoff
        Payoff.Flow
        Payoff.Product
        Payoff.Product.BestOf
        Payoff.Product.Combinator
        Payoff.Product.Core
        TestMarketData
        Utils.Foldable
        Utils.Monad
        Utils.Syntax
        Utils.Time
    ghc-options: -ferror-spans -O2

test-suite test-FinancialProduct
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        containers >=0.5.6.2 && <0.6,
        time >=1.5.0.1 && <1.6,
        mtl >=2.2.1 && <2.3,
        HUnit -any,
        ghc >=7.10.2 && <7.11
    default-language: Haskell2010
    hs-source-dirs: test src
    other-modules:
        Tests
        Tests.EvalUtils
        Tests.Flow
        Tests.Listed.AsianOption
        Tests.Listed.BestOfOption
        Tests.Listed.Bond
        Tests.Listed.EuropeanOption
        Tests.MarketDataSample
        Tests.Observable
        Tests.Payoff
    ghc-options: -ferror-spans
